--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,10 @@
 {
-  "singleQuote": true,
+  "singleQuote": false,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false,
+  "arrowParens": "always",
+  "printWidth": 100,
+  "bracketSpacing": true,
+  "endOfLine": "auto"
 }
