--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
-    "@nx/workspace": "20.1.3",
+    "@nx/eslint": "20.1.4",
+    "@nx/eslint-plugin": "^20.1.4",
+    "@nx/workspace": "20.1.4",
     "@types/node": "latest",
     "eslint": "^9.16.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.6.0",
+    "eslint-plugin-only-warn": "^1.1.0",
     "globals": "^15.12.0",
-    "nx": "20.1.3",
+    "nx": "20.1.4",
     "tsx": "latest",
     "typescript": "latest",
     "typescript-eslint": "^8.16.0"
   },
-  "type": "module"
+  "type": "module",
+  "nx": {}
 }
